--- a/sandbox/sandbox.vcxproj
+++ b/sandbox/sandbox.vcxproj
@@ -59,6 +59,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>metabuf.lib;xml2metabuf.lib;pugixml_sd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\Debug;..\pugixml\scripts\vs2010\x32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <IgnoreSpecificDefaultLibraries>
+      </IgnoreSpecificDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -87,10 +89,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Metacode.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Metacode.hpp" />
     <ClInclude Include="Metatype.hpp" />
   </ItemGroup>
   <ItemGroup>
