--- a/metabuf/metabuf.vcxproj
+++ b/metabuf/metabuf.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ArchiveReader.hpp" />
     <ClInclude Include="Metabuf.hpp" />
   </ItemGroup>
   <ItemGroup>
