--- a/metabuf/metabuf.vcxproj
+++ b/metabuf/metabuf.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ArchiveReader.hpp" />
+    <ClInclude Include="Array.hpp" />
     <ClInclude Include="Metabuf.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -52,6 +53,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>../;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
