--- a/trunk/sandbox_reader/sandbox_reader.vcxproj
+++ b/trunk/sandbox_reader/sandbox_reader.vcxproj
@@ -50,7 +50,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\;..\xml2metabuf;..\pugixml\src;..\sandbox</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\;..\xml2metabuf;..\pugixml\src;..\sandbox;../../stdex/include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
