add make_solution_msvc15_debug.bat update CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,25 @@ cmake_minimum_required(VERSION 3.0)
 set( METABUF_LIB_NAME metabuf )
 
 OPTION( METABUF_EXTERNAL_BUILD "METABUF_EXTERNAL_BUILD" OFF )
-OPTION( METABUF_METAGEN "METABUF_METAGEN" OFF )
-OPTION( METABUF_PUGIXML_INCLUDE "METABUF_PUGIXML_INCLUDE" "" )
-OPTION( METABUF_PUGIXML_LIB "METABUF_PUGIXML_LIB" "" )
+OPTION( METABUF_METAGEN "METABUF_METAGEN" ON )
+OPTION( METABUF_PUGIXML_INCLUDE "METABUF_PUGIXML_INCLUDE" OFF )
+OPTION( METABUF_PUGIXML_LIB "METABUF_PUGIXML_LIB" OFF )
 
 IF( NOT METABUF_EXTERNAL_BUILD )
     SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build_temp/${ENGINE_LIB_DIR} )
     SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/metabuf_win32 )
     SET( CMAKE_TEMP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/CMakeTemp/metabuf_win32/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )
+    
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+    add_definitions(-D_SCL_SECURE_NO_WARNINGS)
+    
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MT")
+
+    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MTd")
+    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT")
+    set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} /MT")    
 ENDIF()
 
 
