SUBSYSTEM:CONSOLE to WIN32

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,8 +63,10 @@ if( METABUF_METAGEN )
 
     ADD_EXECUTABLE( ${METAGEN_LIB_NAME} ${METAGEN_SOURCE_FILES} )
 
-    set_target_properties( ${METAGEN_LIB_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE")
-    set_target_properties( ${METAGEN_LIB_NAME} PROPERTIES COMPILE_DEFINITIONS "_CONSOLE")
+    if( WIN32 )
+        set_target_properties( ${METAGEN_LIB_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE")
+        set_target_properties( ${METAGEN_LIB_NAME} PROPERTIES COMPILE_DEFINITIONS "_CONSOLE")
+    endif()
     
     TARGET_LINK_LIBRARIES( ${METAGEN_LIB_NAME} ${XML2METABUF_LIB_NAME} )
     TARGET_LINK_LIBRARIES( ${METAGEN_LIB_NAME} ${METABUF_PUGIXML_LIB} )
