fix pugixml dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.0)
 
-PROJECT(metabuf)
-
 set( METABUF_LIB_NAME metabuf )
+
+PROJECT(${METABUF_LIB_NAME})
 
 OPTION( METABUF_EXTERNAL_BUILD "METABUF_EXTERNAL_BUILD" OFF )
 OPTION( METABUF_METAGEN "METABUF_METAGEN" ON )
@@ -38,7 +38,11 @@ ADD_LIBRARY( ${METABUF_LIB_NAME} STATIC ${METABUF_SOURCE_FILES} )
 
 
 if( METABUF_METAGEN )
+    #xml2metabuf
+
     set( XML2METABUF_LIB_NAME xml2metabuf )
+    
+    PROJECT(${XML2METABUF_LIB_NAME})
     
     set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} xml2metabuf/Xml2Metabuf.cpp )
     set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} xml2metabuf/Xml2Metabuf.hpp )
@@ -51,16 +55,18 @@ if( METABUF_METAGEN )
     INCLUDE_DIRECTORIES( ${XML2METABUF_LIB_NAME} ${METABUF_PUGIXML_INCLUDE} )
     
     ADD_LIBRARY( ${XML2METABUF_LIB_NAME} STATIC ${XML2METABUF_SOURCE_FILES} )
-    
-    TARGET_LINK_LIBRARIES( ${METAGEN_LIB_NAME} ${METABUF_LIB_NAME} )
+
+    #metagen
     
     set( METAGEN_LIB_NAME metagen )
+    
+    PROJECT(${METAGEN_LIB_NAME})
     
     set( METAGEN_SOURCE_FILES ${METAGEN_SOURCE_FILES} metagen/metagen.cpp )
 
     INCLUDE_DIRECTORIES( ${METAGEN_LIB_NAME} metagen )
     INCLUDE_DIRECTORIES( ${METAGEN_LIB_NAME} ${METABUF_PUGIXML_INCLUDE} )
-
+    
     ADD_EXECUTABLE( ${METAGEN_LIB_NAME} ${METAGEN_SOURCE_FILES} )
 
     if( WIN32 )
@@ -68,6 +74,9 @@ if( METABUF_METAGEN )
         set_target_properties( ${METAGEN_LIB_NAME} PROPERTIES COMPILE_DEFINITIONS "_CONSOLE")
     endif()
     
-    TARGET_LINK_LIBRARIES( ${METAGEN_LIB_NAME} ${XML2METABUF_LIB_NAME} )
-    TARGET_LINK_LIBRARIES( ${METAGEN_LIB_NAME} ${METABUF_PUGIXML_LIB} )
+    target_link_libraries(${METAGEN_LIB_NAME} ${METABUF_LIB_NAME})
+    target_link_libraries(${METAGEN_LIB_NAME} ${XML2METABUF_LIB_NAME})
+    target_link_libraries(${METAGEN_LIB_NAME} ${METABUF_PUGIXML_LIB})
+    
+    add_dependencies(${METAGEN_LIB_NAME} pugixml)
 endif()
