fix metabuf CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ PROJECT(${METABUF_LIB_NAME})
 
 OPTION( METABUF_EXTERNAL_BUILD "METABUF_EXTERNAL_BUILD" OFF )
 OPTION( METABUF_METAGEN "METABUF_METAGEN" ON )
+OPTION( METABUF_XML2METABUF "METABUF_XML2METABUF" OFF )
 OPTION( METABUF_PUGIXML_INCLUDE "METABUF_PUGIXML_INCLUDE" OFF )
 OPTION( METABUF_PUGIXML_LIB "METABUF_PUGIXML_LIB" OFF )
 
@@ -36,8 +37,7 @@ INCLUDE_DIRECTORIES( ${METABUF_LIB_NAME} metabuf )
 
 ADD_LIBRARY( ${METABUF_LIB_NAME} STATIC ${METABUF_SOURCE_FILES} )
 
-
-if( METABUF_METAGEN )
+if( METABUF_METAGEN OR METABUF_XML2METABUF )
     #xml2metabuf
 
     set( XML2METABUF_LIB_NAME xml2metabuf )
@@ -55,7 +55,9 @@ if( METABUF_METAGEN )
     INCLUDE_DIRECTORIES( ${XML2METABUF_LIB_NAME} ${METABUF_PUGIXML_INCLUDE} )
     
     ADD_LIBRARY( ${XML2METABUF_LIB_NAME} STATIC ${XML2METABUF_SOURCE_FILES} )
+endif()
 
+if( METABUF_METAGEN )
     #metagen
     
     set( METAGEN_LIB_NAME metagen )
@@ -76,7 +78,5 @@ if( METABUF_METAGEN )
     
     target_link_libraries(${METAGEN_LIB_NAME} ${METABUF_LIB_NAME})
     target_link_libraries(${METAGEN_LIB_NAME} ${XML2METABUF_LIB_NAME})
-    target_link_libraries(${METAGEN_LIB_NAME} ${METABUF_PUGIXML_LIB})
-    
-    add_dependencies(${METAGEN_LIB_NAME} pugixml)
+    target_link_libraries(${METAGEN_LIB_NAME} ${METABUF_PUGIXML_LIB})    
 endif()
