--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,11 +37,13 @@ INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf )
 
 ADD_LIBRARY( ${PROJECT_NAME} STATIC ${METABUF_SOURCE_FILES} )
 
-if( NOT METABUF_PUGIXML_INCLUDE_DIR OR NOT METABUF_PUGIXML_LIBRARY_NAME )
-    include(cmake/pugixml_download.cmake)
-    
-    set(METABUF_PUGIXML_INCLUDE_DIR ${pugixml_INCLUDE_DIR})
-    set(METABUF_PUGIXML_LIBRARY_NAME ${pugixml_LIBRARY_NAME})
+if( METABUF_METAGEN OR METABUF_XML2METABUF )
+    if( NOT METABUF_PUGIXML_INCLUDE_DIR OR NOT METABUF_PUGIXML_LIBRARY_NAME )
+        include(cmake/pugixml_download.cmake)
+        
+        set(METABUF_PUGIXML_INCLUDE_DIR ${pugixml_INCLUDE_DIR})
+        set(METABUF_PUGIXML_LIBRARY_NAME ${pugixml_LIBRARY_NAME})
+    endif()
 endif()
 
 if( METABUF_METAGEN OR METABUF_XML2METABUF )
@@ -57,7 +59,7 @@ if( METABUF_METAGEN OR METABUF_XML2METABUF )
     set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/XmlProtocol.hpp )
     
     INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf )
-    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${pugixml_INCLUDE_DIR} )
+    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR} )
     
     ADD_LIBRARY( ${PROJECT_NAME} STATIC ${XML2METABUF_SOURCE_FILES} )
 endif()
@@ -70,7 +72,7 @@ if( METABUF_METAGEN )
     set( METAGEN_SOURCE_FILES ${METAGEN_SOURCE_FILES} metagen/metagen.cpp )
 
     INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/metagen )
-    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${pugixml_INCLUDE_DIR} )
+    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR} )
     
     ADD_EXECUTABLE( ${PROJECT_NAME} ${METAGEN_SOURCE_FILES} )
 
