--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ PROJECT(metabuf)
 OPTION( METABUF_EXTERNAL_BUILD "METABUF_EXTERNAL_BUILD" OFF )
 OPTION( METABUF_METAGEN "METABUF_METAGEN" ON )
 OPTION( METABUF_XML2METABUF "METABUF_XML2METABUF" OFF )
+OPTION( METABUF_PUGIXML_EXTERNAL "METABUF_PUGIXML_EXTERNAL" OFF )
 OPTION( METABUF_PUGIXML_INCLUDE_DIR "METABUF_PUGIXML_INCLUDE_DIR" OFF )
 OPTION( METABUF_PUGIXML_LIBRARY_NAME "METABUF_PUGIXML_LIBRARY_NAME" OFF )
 
@@ -40,7 +41,7 @@ INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf )
 ADD_LIBRARY( ${PROJECT_NAME} STATIC ${METABUF_SOURCE_FILES} )
 
 if( METABUF_METAGEN OR METABUF_XML2METABUF )
-    if( NOT METABUF_PUGIXML_INCLUDE_DIR OR NOT METABUF_PUGIXML_LIBRARY_NAME )
+    if( NOT METABUF_PUGIXML_EXTERNAL )
         include(cmake/pugixml_download.cmake)
         
         set(METABUF_PUGIXML_INCLUDE_DIR ${pugixml_INCLUDE_DIR})
@@ -85,5 +86,9 @@ if( METABUF_METAGEN )
     
     target_link_libraries(${PROJECT_NAME} metabuf xml2metabuf)
     target_link_libraries(${PROJECT_NAME} ${XML2METABUF_LIBRARY_NAME})
-    target_link_libraries(${PROJECT_NAME} ${METABUF_PUGIXML_LIBRARY_NAME})    
+    target_link_libraries(${PROJECT_NAME} ${METABUF_PUGIXML_LIBRARY_NAME})
+    
+    if( NOT METABUF_PUGIXML_EXTERNAL )
+        add_dependencies(${PROJECT_NAME} pugixml_download)
+    endif()
 endif()
