add CMAKE metabuf install add CMAKE metabuf config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ OPTION( METABUF_XML2METABUF "METABUF_XML2METABUF" OFF )
 OPTION( METABUF_PUGIXML_EXTERNAL "METABUF_PUGIXML_EXTERNAL" OFF )
 OPTION( METABUF_PUGIXML_INCLUDE_DIR "METABUF_PUGIXML_INCLUDE_DIR" OFF )
 OPTION( METABUF_PUGIXML_LIBRARY_NAME "METABUF_PUGIXML_LIBRARY_NAME" OFF )
+OPTION( METABUF_CONFIG "METABUF_CONFIG" OFF )
+OPTION( METABUF_INSTALL "METABUF_INSTALL" OFF )
+
 
 IF( NOT METABUF_EXTERNAL_BUILD )
     set( CMAKE_CXX_STANDARD 14 )
@@ -30,6 +33,9 @@ IF( NOT METABUF_EXTERNAL_BUILD )
     endif()
 ENDIF()
 
+IF(METABUF_CONFIG)
+    add_definitions(-DMETABUF_CONFIG=${METABUF_CONFIG})
+ENDIF()
 
 SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf/Metaconfig.hpp )
 SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf/Metadata.cpp )
@@ -39,6 +45,16 @@ SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/me
 INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf )
 
 ADD_LIBRARY( ${PROJECT_NAME} STATIC ${METABUF_SOURCE_FILES} )
+
+if(METABUF_INSTALL)
+    install(DIRECTORY include
+        DESTINATION .
+        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")
+
+    install(TARGETS ${PROJECT_NAME}
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib)
+endif()
 
 if( METABUF_METAGEN OR METABUF_XML2METABUF )
     if( NOT METABUF_PUGIXML_EXTERNAL )
