fix xml2metabuf dependencies pugixml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,10 @@ if( METABUF_METAGEN OR METABUF_XML2METABUF )
     INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR} )
     
     ADD_LIBRARY( ${PROJECT_NAME} STATIC ${XML2METABUF_SOURCE_FILES} )
+    
+    if( NOT METABUF_PUGIXML_EXTERNAL )
+        add_dependencies(${PROJECT_NAME} pugixml_download)
+    endif()
 endif()
 
 if( METABUF_METAGEN )
