some rework readHeader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,11 +37,12 @@ IF(METABUF_CONFIG)
     add_definitions(-DMETABUF_CONFIG=${METABUF_CONFIG})
 ENDIF()
 
+SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/include/Metadata.hpp )
 SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf/Metaconfig.hpp )
 SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf/Metadata.cpp )
-SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf/Metadata.hpp )
 SET( METABUF_SOURCE_FILES ${METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf/Reader.hpp )
 
+INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/include )
 INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/metabuf )
 
 ADD_LIBRARY( ${PROJECT_NAME} STATIC ${METABUF_SOURCE_FILES} )
@@ -77,6 +78,7 @@ if( METABUF_METAGEN OR METABUF_XML2METABUF )
     set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/XmlProtocol.cpp )
     set( XML2METABUF_SOURCE_FILES ${XML2METABUF_SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf/XmlProtocol.hpp )
     
+    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/include )
     INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/xml2metabuf )
     INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR} )
     
@@ -94,6 +96,7 @@ if( METABUF_METAGEN )
     
     set( METAGEN_SOURCE_FILES ${METAGEN_SOURCE_FILES} metagen/metagen.cpp )
 
+    INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/include )
     INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/metagen )
     INCLUDE_DIRECTORIES( ${PROJECT_NAME} ${METABUF_PUGIXML_INCLUDE_DIR} )
     
